# poklicna_matura

./: .clang-format  .gitignore  meson.build
dokumentacija/: dokumentacija.md  template.latex
keys/: ssh_host_rsa_key  ssh_host_rsa_key.pub
src/: commands.hpp  events.cpp  events.hpp  main.cpp  meson.build
src/broadcast/: broadcast.cpp  broadcast.hpp
src/components/broadcast/: broadcast.cpp  broadcast.hpp  broadcast_test.cpp  meson.build
src/components/device/: device.cpp  device.hpp  device_test.cpp  meson.build
src/components/packet/: packet.hpp
src/components/share/: entry.hpp  share.hpp
src/sftp/: client.cpp  client.hpp  getfile.hpp  server.cpp  server.hpp  server_handler.cpp  server_handler.hpp
src/storage/: storage.cpp  storage.hpp
src/windows/app/: app.cpp  app.hpp  app.ui  meson.build
